Fixes issues where, on mobile browsers, 100vh is not equal to window.innerHeight.

--- a/src/assets/styles/layout/_container.css
+++ b/src/assets/styles/layout/_container.css
@@ -1,12 +1,9 @@
 
 
 .container {
-  min-height: var(--min-height);
-  height: 100vh;
 }
 
 .container-inner {
-  height: calc(100% - var(--ad-height));
   position: relative;
 }
 
